--- a/style.css
+++ b/style.css
@@ -1,22 +1,1 @@
-/* style.css */
-body {
-    font-family: Arial, sans-serif;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f0f0f0;
-}
-header {
-    text-align: center;
-    color: #333;
-}
-footer {
-    text-align: center;
-    margin-top: 50px;
-    color: #666;
-}
-img {
-    width: 1000px;
-    height: 700px;
-    border-radius: 10%;
-}
+footer,header{text-align:center}body{font-family:Arial,sans-serif;max-width:800px;margin:0 auto;padding:20px;background-color:#f0f0f0}header{color:#333}footer{margin-top:50px;color:#666}img{width:1000px;height:700px;border-radius:10%}
